<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_comic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="css.mrauzi.comiclistapp.ComicActivity"
    tools:showIn="@layout/app_bar_comic">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewAmazon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/press_this_button_to_open_amazon_com_and_start_searching_for_comics"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:textAlignment="center" />

        <Button
            android:text="@string/amazon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewAmazon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:id="@+id/buttonAmazon"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/comic_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:id="@+id/textViewComicName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editTextComicName" />

        <TextView
            android:text="@string/comic_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewComicPrice"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editTextComicPrice" />

        <TextView
            android:text="@string/comic_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewComicVolume"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextComicVolume" />

        <Button
            android:text="@string/add_comic_to_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonAddComic"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <Button
            android:text="@string/view_comic_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonViewList"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

    </LinearLayout>

</LinearLayout>
